{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 77,
  "lineage": "c7f5e1d0-aa98-1cab-5f7e-0ededf8246b7",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "example_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/027957f2-d69a-4273-86bf-f032d3f33f81/resourceGroups/newRG/providers/Microsoft.Network/networkSecurityGroups/newnsg",
            "location": "eastus",
            "name": "newnsg",
            "resource_group_name": "newRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.0.0/24",
                  "172.16.0.0/16",
                  "192.168.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "200.160.200.30"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "200.160.200.30",
                  "200.160.200.60"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.0.0/24",
                  "172.16.0.0/16",
                  "192.168.1.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "10.0.0.0/24",
                  "172.16.0.0/16",
                  "192.168.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowDNS",
                "priority": 400,
                "protocol": "Udp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "200.160.200.30"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "123",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowUDP",
                "priority": 300,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/027957f2-d69a-4273-86bf-f032d3f33f81/resourceGroups/newRG/providers/Microsoft.Network/networkSecurityGroups/newnsg",
            "location": "eastus",
            "name": "newnsg",
            "resource_group_name": "newRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "123",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowUDP",
                "priority": 300,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": null,
                "destination_address_prefixes": [
                  "10.0.0.0/24",
                  "172.16.0.0/16",
                  "192.168.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowDNS",
                "priority": 400,
                "protocol": "Udp",
                "source_address_prefix": null,
                "source_address_prefixes": [
                  "200.160.200.30"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": null,
                "destination_address_prefixes": [
                  "10.0.0.0/24",
                  "172.16.0.0/16",
                  "192.168.1.0/24"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": null,
                "source_address_prefixes": [
                  "200.160.200.30"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": null,
                "destination_address_prefixes": [
                  "200.160.200.30",
                  "200.160.200.60"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": null,
                "source_address_prefixes": [
                  "10.0.0.0/24",
                  "172.16.0.0/16",
                  "192.168.1.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    }
  ]
}